@@ -257,7 +257,6 @@ L["Sold junk for: %s"] = "Müll verkauft für: %s"
 L["Separate bags"] = "Taschen separat anzeigen"
 L["New Bag Name"] = "Neuer Taschenname:"
 L["Right click to customize the bag title."] = "Rechtsklick um einen individuellen Namen festzulegen"
-L["GW2 UI Settings"] = "GW2 UI"
 L["Save and Reload"] = "Speichern und \nneu laden"
 L["Lock HUD"] = "HUD sperren"
 L["Display all of the target's debuffs."] = "Zeige alle Schächungszauber des Ziels an."
