@@ -257,7 +257,6 @@ L["Sold junk for: %s"] = "Se ha vendido la basura por: %s"
 L["Separate bags"] = "Separar bolsas"
 L["New Bag Name"] = "Nuevo nombre de bolsa"
 L["Right click to customize the bag title."] = "Clic derecho para personalizar el título de la bolsa."
-L["GW2 UI Settings"] = "Ajustes de GW2 UI"
 L["Save and Reload"] = "Guardar y recargar"
 L["Lock HUD"] = "Bloquear HUD"
 L["Display all of the target's debuffs."] = "Mostrar todos los perjuicios del objetivo."
@@ -314,3 +313,4 @@ L["Bar"] = "Barra"
 L["Top Left"] = "Encima izquierda"
 L["Top Right"] = "Encima derecha"
 L["Center"] = "Centro"
+L["Player frame in target frame style"] = true
