@@ -256,7 +256,6 @@ L["Sold junk for: %s"] = "Se vendió basura por:% s"
 L["Separate bags"] = "Separar bolsas"
 L["New Bag Name"] = "Nuevo nombre de bolsa"
 L["Right click to customize the bag title."] = "Haz clic derecho para personalizar el título de la bolsa."
-L["GW2 UI Settings"] = "Ajustes de GW2 UI"
 L["Save and Reload"] = "Guardar y volver a cargar"
 L["Lock HUD"] = "Bloquear HUD"
 L["Display all of the target's debuffs."] = "Mostrar todas las desventajas del objetivo"
@@ -309,3 +308,4 @@ L["Show Coordinates on World Map"] = "Mostrar coordenadas en el mapa del mundo"
 L["Show menu for placing world markers when in raids."] = "Mostrar menú para colocar marcadores del mundo en incursiones"
 L["Zone Ability"] = "habilidad de zona"
 L["Fade Action Bars"] = "Ocultar las barras de acción"
+L["Player frame in target frame style"] = true
