@@ -257,7 +257,6 @@ L["Sold junk for: %s"] = "Camelote vendu pour : %s"
 L["Separate bags"] = "Sacs séparés"
 L["New Bag Name"] = "Nouveau nom de sac"
 L["Right click to customize the bag title."] = "Clic droit pour modifier le titre du sac"
-L["GW2 UI Settings"] = "Options de l'UI GW2"
 L["Save and Reload"] = "Sauver et recharger"
 L["Lock HUD"] = "Vérouiller l'interface"
 L["Display all of the target's debuffs."] = "Afficher tout les effets néfastes de la cible."
@@ -314,3 +313,4 @@ L["Bar"] = "Barre"
 L["Top Left"] = "Haut Gauche"
 L["Top Right"] = "Haut Droite"
 L["Center"] = "Centre"
+L["Player frame in target frame style"] = true
