@@ -257,7 +257,6 @@ L["Sold junk for: %s"] = "cianfrusaglie vendute per: %s"
 L["Separate bags"] = "Separa borse"
 L["New Bag Name"] = "Nome della nuova borsa"
 L["Right click to customize the bag title."] = "Clicca con il tasto detro per personalizzare il titolo della borsa."
-L["GW2 UI Settings"] = "Impostazioni GW2 UI"
 L["Save and Reload"] = "Salva e Ricarica"
 L["Lock HUD"] = "Blocca HUD"
 L["Display all of the target's debuffs."] = "Mostra tutte le penalità del bersaglio."
@@ -314,3 +313,4 @@ L["Bar"] = "Barra"
 L["Top Left"] = "In alto a sinistra"
 L["Top Right"] = "In altro a destra"
 L["Center"] = "Centro"
+L["Player frame in target frame style"] = true
