@@ -143,7 +143,6 @@ L["Set Raid Units per Column"] = "공격대 한 줄 당 인원 설정"
 L["Set the number of raid unit frames per column or row, depending on grow directions."] = "공격대 창의 한 줄 당 몇명의 인원을 표시할지 설정합니다."
 L["Replace the default mana/power bar."] = "기본 마나 / 파워 바를 교체하십시오."
 L["Lock HUD"] = "HUD 잠금"
-L["GW2 UI Settings"] = "GW2 UI 설정"
 L["Save and Reload"] = "저장후 재시작"
 L["Display all of the target's debuffs."] = "모든 대상의 디버프를 표시합니다."
 L["Display the target's buffs."] = "대상의 버프를 표시합니다."
@@ -311,3 +310,9 @@ L["Micro Bar"] = "메뉴모음 바"
 L["Modifier for IDs"] = "ID 상세보기 키"
 L["Auras per row"] = "행별 오라 개수"
 L["Right Bar Width"] = "오른쪽 바 너비"
+L["GW2 UI Update"] = "GW2 UI 업데이트"
+L["Bar"] = "바"
+L["Top Left"] = "좌상단"
+L["Top Right"] = "우상단"
+L["Center"] = "가운데"
+L["Player frame in target frame style"] = true
