@@ -257,7 +257,6 @@ L["Sold junk for: %s"] = "Tralha Vendida por: %s"
 L["Separate bags"] = "Separar Bolsas"
 L["New Bag Name"] = "Novo nome da bolsa"
 L["Right click to customize the bag title."] = "Clique com o botão direito para customizar o título da bolsa."
-L["GW2 UI Settings"] = "Configurações do GW2 UI"
 L["Save and Reload"] = "Salvar e Recarregar"
 L["Lock HUD"] = "Travar Interface"
 L["Display all of the target's debuffs."] = "Mostrar todos os efeitos negativos no alvo."
@@ -314,3 +313,4 @@ L["Bar"] = "Barra"
 L["Top Left"] = "Topo Esquerda"
 L["Top Right"] = "Topo Direita"
 L["Center"] = "Centro"
+L["Player frame in target frame style"] = true
