@@ -257,7 +257,6 @@ L["Sold junk for: %s"] = "已售出垃圾：%s"
 L["Separate bags"] = "分离背包"
 L["New Bag Name"] = "自定义背包名称"
 L["Right click to customize the bag title."] = "右键单击更改背包名称."
-L["GW2 UI Settings"] = "GW2 UI 设置"
 L["Save and Reload"] = "保存并重载界面"
 L["Lock HUD"] = "锁定并重载界面"
 L["Display all of the target's debuffs."] = "显示包括不可驱散的所有减益状态."
@@ -314,3 +313,4 @@ L["Bar"] = "条"
 L["Top Left"] = "左上"
 L["Top Right"] = "右上"
 L["Center"] = "中心"
+L["Player frame in target frame style"] = true
