@@ -257,7 +257,6 @@ L["Sold junk for: %s"] = "已賣出垃圾: %s"
 L["Separate bags"] = "分離背包"
 L["New Bag Name"] = "新背包名稱"
 L["Right click to customize the bag title."] = "點一下右鍵自訂背包標題"
-L["GW2 UI Settings"] = "GW2 UI 設定"
 L["Save and Reload"] = "儲存並重新載入"
 L["Lock HUD"] = "鎖定介面"
 L["Display all of the target's debuffs."] = "顯示目標身上全部的減益效果。"
@@ -314,3 +313,4 @@ L["Bar"] = "條列"
 L["Top Left"] = "左上"
 L["Top Right"] = "右上"
 L["Center"] = "中間"
+L["Player frame in target frame style"] = true
