@@ -6,6 +6,7 @@ NEW
 FIXES
     - Update "Raid Debuffs"
     - Guild auto repair if not in guild
+    - Gamemenu fixes to better interact with ElvUI
 
 5.8.0
 NEW
